refactor(tables): Update for new randomizer changes

--- a/src/app/table-list/table-list.component.html
+++ b/src/app/table-list/table-list.component.html
@@ -6,6 +6,6 @@
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let entry of table.tables.default"><td>{{ entry }}</td></tr>
+        <tr *ngFor="let entry of table.tables.default"><td>{{ entry.label }}</td></tr>
     </tbody>
 </table>
