feat: Framework for lots of new features
all still in process and incomplete

--- a/src/app/results-modal/results-modal.component.html
+++ b/src/app/results-modal/results-modal.component.html
@@ -6,7 +6,7 @@
     <button class="close-button" (click)="closeModal()">Close</button>
     <h1>{{ resultSet.title }}</h1>
 
-    <app-table-result [table]="table" [resultSet]="resultSet"></app-table-result>
+    <app-table-result [table]="table" [resultSet]="resultSet" (resultSaved)="closeModal()"></app-table-result>
 
   </div>
 </div>
