--- a/src/app/table-result/table-result.component.html
+++ b/src/app/table-result/table-result.component.html
@@ -7,3 +7,6 @@
     <span *ngIf="result.table != 'default'">{{ result.table }}:</span> {{ result.result }}
     <span *ngIf="result.desc">{{ result.desc }}</span>
 </p>
+
+
+<button type="button" (click)="saveAsNote()">Save as Note</button>
