--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,30 @@
 
 <!-- <app-table-list *ngFor="let table of tables" [table]="table" (resultRoll)="showResult($event)"></app-table-list> -->
+<header id="header">
+    <h1>Hadleyville</h1>
+</header>
 
-<app-table-multi *ngFor="let table of tables" [table]="table" (resultRoll)="showResult($event)"></app-table-multi>
+<section id="npcs">
+    <h2>NPCs</h2>
+    <button (click)="getNPC()">NPC?</button>
+    <button (click)="getNPCName()">Name</button>
+    <app-npc *ngFor="let npc of npcs" [npc]="npc"></app-npc>
+</section>
 
-<app-table-result *ngFor="let a of results" [table]="a.table" [resultSet]="a.resultSet"></app-table-result>
+<section id="notes">
+    <h2>Notes</h2>
+    <app-note *ngFor="let note of notes" [note]="note"></app-note>
+</section>
 
-<app-modalcontainer></app-modalcontainer>
+
+
+<section id="tables">
+    <h2>Tables</h2>
+    <app-table-multi *ngFor="let table of tables" [table]="table" (resultRoll)="showResult($event)"></app-table-multi>
+</section>
+
+
+<footer>
+    <p>&copy; 2021 Derik Badman.</p>
+    <app-modalcontainer></app-modalcontainer>
+</footer>
