--- a/src/app/table-multi/table-multi.component.html
+++ b/src/app/table-multi/table-multi.component.html
@@ -1,14 +1,19 @@
-<table *ngIf="table">
-    <caption>{{ table.title }} <button *ngIf="subtableNames.length > 1" type="button" (click)="rollTable($event)">Roll</button></caption>
-    <thead>
-        <tr>
-            <th *ngIf="includeNumbers">Roll</th>
-            <th *ngFor="let h of subtableNames">{{ h }} <button type="button" (click)="rollTable($event, h)">Roll</button></th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let row of tableRows">
-            <td *ngFor="let cell of row">{{ cell }}</td>
-        </tr>
-    </tbody>
-</table>
+<details>
+    <summary>
+        <div id="table-title">{{ table.title }}</div>
+        <div id="table-actions"><button *ngIf="subtableNames.length > 1" type="button" (click)="rollTable($event)">Roll</button></div>
+    </summary>
+    <table *ngIf="table" aria-labelledby="table-title">
+        <thead>
+            <tr>
+                <th *ngIf="includeNumbers">Roll</th>
+                <th *ngFor="let h of subtableNames">{{ h }} <button type="button" (click)="rollTable($event, h)">Roll</button></th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let row of tableRows">
+                <td *ngFor="let cell of row">{{ cell }}</td>
+            </tr>
+        </tbody>
+    </table>
+</details>
