--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,30 +1,18 @@
-
-<!-- <app-table-list *ngFor="let table of tables" [table]="table" (resultRoll)="showResult($event)"></app-table-list> -->
 <header id="header">
     <h1>Hadleyville</h1>
+    <nav>
+        <ul>
+            <li><a routerLink="/" routerLinkActive="active">Home</a></li>
+            <li><a routerLink="/intro" routerLinkActive="active">Intro</a></li>
+            <li><a routerLink="/rules" routerLinkActive="active">Rules</a></li>
+          </ul>
+    </nav>
 </header>
+<main>
+<router-outlet></router-outlet>
 
-<section id="npcs">
-    <h2>NPCs</h2>
-    <button (click)="getNPC()">NPC?</button>
-    <button (click)="getNPCName()">Name</button>
-    <app-npc *ngFor="let npc of npcs" [npc]="npc"></app-npc>
-</section>
-
-<section id="notes">
-    <h2>Notes</h2>
-    <app-note *ngFor="let note of notes" [note]="note"></app-note>
-</section>
-
-
-
-<section id="tables">
-    <h2>Tables</h2>
-    <app-table-multi *ngFor="let table of tables" [table]="table" (resultRoll)="showResult($event)"></app-table-multi>
-</section>
-
-
+</main>
 <footer>
-    <p>&copy; 2021 Derik Badman.</p>
+    <p>Written in Mar-Apr 2021 by Derik A. Badman <a href="https://derikbadman.com">https://derikbadman.com</a> Game info and updates at <a href="https://madinkbeard.itch.io/hadleyville">https://madinkbeard.itch.io/hadleyville</a></p>
     <app-modalcontainer></app-modalcontainer>
 </footer>
