--- a/src/app/table-multi/table-multi.component.html
+++ b/src/app/table-multi/table-multi.component.html
@@ -1,13 +1,13 @@
 <details>
     <summary>
         <div id="table-title">{{ table.title }}</div>
-        <div id="table-actions"><button *ngIf="subtableNames.length > 1" type="button" (click)="rollTable($event)">Roll</button></div>
+        <div id="table-actions"><button type="button" (click)="rollTable($event)">Roll</button></div>
     </summary>
-    <table *ngIf="table" aria-labelledby="table-title">
-        <thead>
+    <table *ngIf="table" aria-labelledby="table-title" aria-labelledby="table-title">
+        <thead *ngIf="subtableNames.length > 1">
             <tr>
                 <th *ngIf="includeNumbers">Roll</th>
-                <th *ngFor="let h of subtableNames">{{ h }} <button type="button" (click)="rollTable($event, h)">Roll</button></th>
+                <th *ngFor="let h of subtableNames">{{ h | titlecase }} <button type="button" (click)="rollTable($event, h)">Roll</button></th>
             </tr>
         </thead>
         <tbody>
