--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <header id="header">
     <h1>Hadleyville</h1>
+    <app-roller></app-roller>
     <nav>
         <ul>
             <li><a routerLink="/" routerLinkActive="active">Home</a></li>
