feat: Redux, localstorage, ui changes, etc.

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -7,7 +7,7 @@
 
 <section id="notes">
     <h2>Notes</h2>
-    <app-note *ngFor="let note of notes" [note]="note"></app-note>
+    <app-note *ngFor="let note of notes" [note]="note" class="mat-typography"></app-note>
 </section>
 
 <section id="tables">
