--- a/src/app/note-edit-modal/note-edit-modal.component.css
+++ b/src/app/note-edit-modal/note-edit-modal.component.css
@@ -1,51 +1,3 @@
-.modal {
-    /* This way it could be display flex or grid or whatever also. */
-    display: block;
-
-    /* Probably need media queries here */
-    width: 600px;
-    max-width: 100%;
-
-    height: 400px;
-    max-height: 100%;
-
-    position: fixed;
-
-    z-index: 100;
-
-    left: 50%;
-    top: 50%;
-
-    /* Use this for centering if unknown width/height */
-    transform: translate(-50%, -50%);
-
-    /* If known, negative margins are probably better (less chance of blurry text). */
-    /* margin: -200px 0 0 -200px; */
-
-    background: white;
-    box-shadow: 0 0 40px 5px rgba(0, 0, 0, 0.3);
-  }
-  .closed {
-    display: none;
-  }
-
-  .modal-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 50;
-
-    background: rgba(0, 0, 0, 0.1);
-  }
-  .modal-guts {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    padding: 20px 50px 20px 20px;
-  }
-
+mat-form-field {
+  width: 100%;
+}
