feat(ui): More updates

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <header id="header">
-    <h1>Hadleyville</h1>
+    <h1>Hadleyville: Rules Light RPG</h1>
     <app-roller></app-roller>
     <nav>
         <ul>
