--- a/src/app/home-page/home-page.component.css
+++ b/src/app/home-page/home-page.component.css
@@ -6,6 +6,16 @@
     gap: 1rem;
 }
 
+section > header {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 1rem;
+}
+section > header > h2 {
+    flex: 2 1 auto;
+    margin: 0;
+}
+
 section#npcs {
     grid-area: npcs;
     padding: 1rem;
