--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,12 +1,16 @@
 <section id="npcs">
-    <h2>NPCs</h2>
-    <button (click)="getNPC()">NPC?</button>
-    <button (click)="getNPCName()">Name</button>
+    <header>
+        <h2>NPCs</h2>
+        <button mat-stroked-button (click)="getNPC()">Create NPC</button>
+        <button mat-stroked-button (click)="getNPCName()">Get Name</button>
+    </header>
     <app-npc *ngFor="let npc of npcs" [npc]="npc"></app-npc>
 </section>
 
 <section id="notes">
-    <h2>Notes</h2>
+    <header>
+        <h2>Notes</h2>
+    </header>
     <app-note *ngFor="let note of notes" [note]="note" class="mat-typography"></app-note>
 </section>
 
