--- a/src/app/npc-edit-modal/npc-edit-modal.component.html
+++ b/src/app/npc-edit-modal/npc-edit-modal.component.html
@@ -1,22 +1,21 @@
+<h1 mat-dialog-title id="modal-title">Edit NPC</h1>
 
-    <h1 mat-dialog-title id="modal-title">Edit NPC</h1>
+<mat-dialog-content>
+  <form id="npcEditForm" (ngSubmit)="onSubmit($event)">
+    <div *ngFor="let field of schema.fields">
+      <mat-form-field appearance="outline">
+        <mat-label>{{ field.label }}</mat-label>
+        <ng-container [ngSwitch]="field.key">
+          <textarea *ngSwitchCase="'notes'" rows=5 matInput id="{{ field.key }}" name="{{ field.key }}">{{ npc.fields[field.key] }}</textarea>
+          <input *ngSwitchDefault matInput id="{{ field.key }}" type="text" name="{{ field.key }}" value="{{ npc.fields[field.key] }}" required>
+        </ng-container>
 
-    <form (ngSubmit)="onSubmit($event)">
-      <div>
-        <mat-form-field appearance="outline">
-            <mat-label>Name</mat-label>
-            <input matInput id="npcName" type="text" name="npcName" value="{{ npc.fields.npcName }}" required>
-        </mat-form-field>
-      </div>
-      <!-- <div>
-        <mat-form-field appearance="outline">
-          <mat-label>Content</mat-label>
-          <textarea matInput id="content" type="text" name="content" rows="12">{{ note.content }}</textarea>
-        </mat-form-field>
-      </div> -->
+      </mat-form-field>
+    </div>
+  </form>
+</mat-dialog-content>
 
-      <mat-dialog-actions>
-        <button mat-flat-button color="primary" type="submit">Save</button>
-        <button mat-flat-button type="button" mat-dialog-close>Cancel</button>
-      </mat-dialog-actions>
-    </form>
+<mat-dialog-actions>
+  <button mat-flat-button color="primary" type="submit" form="npcEditForm">Save</button>
+  <button mat-flat-button type="button" mat-dialog-close>Cancel</button>
+</mat-dialog-actions>
