--- a/src/app/npc/npc.component.css
+++ b/src/app/npc/npc.component.css
@@ -3,16 +3,32 @@
     margin-bottom: 1rem;
 }
 
-mat-card-title {
-    border-bottom: 1px solid gray;
+details {
+    box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),0px 1px 1px 0px rgba(0, 0, 0, 0.14),0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+    border-radius: 4px;
+    padding: .5rem;
+    /* max-height: 3rem; */
 }
-
-h4 {
+/* details[open] {
+    transition: all 3s cubic-bezier(0.4, 0, 0.2, 1);
+    max-height: 1199rem;
+} */
+summary {
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+    padding: 0rem;
+    align-items: center;
+}
+details summary #summary-title::before {
+    content: "▲";
+    margin-right: .5rem;
+    font-size: .8rem;
+}
+details[open] summary #summary-title::before {
+    content: "▼";
+}
+summary #summary-title {
     font-weight: bold;
-    font-size: 1.1rem;
-    margin-bottom: .8rem;
-}
-
-mat-card-actions {
-    text-align: right;
+    font-size: 1rem;
 }
