--- a/src/app/results-modal/results-modal.component.html
+++ b/src/app/results-modal/results-modal.component.html
@@ -1,12 +1,11 @@
-<div class="modal-overlay" id="modal-overlay" (click)="closeModal()"></div>
+<h1 mat-dialog-title id="modal-title">{{ resultSet.title }}</h1>
 
-<div class="modal" id="modal">
+<mat-dialog-content>
+  <app-table-result [table]="table" [resultSet]="resultSet"></app-table-result>
+</mat-dialog-content>
+<mat-dialog-actions>
+  <button type="button" mat-flat-button color="primary"  (click)="saveAsNote()">Save as Note</button>
+  <button mat-flat-button type="button" mat-dialog-close>Close</button>
+</mat-dialog-actions>
 
-  <div class="modal-guts">
-    <button class="close-button" (click)="closeModal()">Close</button>
-    <h1>{{ resultSet.title }}</h1>
 
-    <app-table-result [table]="table" [resultSet]="resultSet" (resultSaved)="closeModal()"></app-table-result>
-
-  </div>
-</div>
