--- a/src/app/table-multi/table-multi.component.css
+++ b/src/app/table-multi/table-multi.component.css
@@ -2,22 +2,54 @@
     display: block;
     padding: 0;
 }
-header, summary {
+
+@keyframes slideDown {
+    0% {
+      opacity: 0;
+      height: 0;
+    }
+    100% {
+      opacity: 1;
+      height: '100%';
+    }
+}
+
+
+details {
+    box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),0px 1px 1px 0px rgba(0, 0, 0, 0.14),0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+    border-radius: 4px;
+    padding: .5rem;
+    /* max-height: 3rem; */
+}
+/* details[open] {
+    transition: all 3s cubic-bezier(0.4, 0, 0.2, 1);
+    max-height: 1199rem;
+} */
+summary {
+    list-style: none;
     display: flex;
     justify-content: space-between;
-    background-color: #eee;
-    padding: .5rem;
-    margin-bottom: 1rem;
+    padding: 0rem;
+    align-items: center;
 }
-header #table-title, summary #table-title {
+summary #summary-title {
     font-weight: bold;
-    font-size: 1.2rem;
+    font-size: 1rem;
+}
+details summary #summary-title::before {
+    content: "▲";
+    margin-right: .5rem;
+    font-size: .8rem;
+}
+details[open] summary #summary-title::before {
+    content: "▼";
 }
 table {
+    box-sizing: border-box;
     border-collapse: collapse;
     border: none;
     width: 100%;
-    margin-bottom: 1rem;
+    margin-top: 1rem;
 }
 table td, table th {
     padding: .25rem;
