--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,3 +1,5 @@
+<!-- <button type="button" (click)="createTown()">Create Town?</button> -->
+
 <app-npcs-list role="landmark" id="npcs"></app-npcs-list>
 
 <app-notes-list role="landmark" id="notes"></app-notes-list>
