--- a/src/app/pages/home-page/home-page.component.css
+++ b/src/app/pages/home-page/home-page.component.css
@@ -1,9 +1,14 @@
 :host {
     display: grid;
     grid-template-columns: 40% 60%;
-    grid-template-areas: "npcs tables"
+    grid-template-areas: "npcs town"
         "notes tables";
     gap: 1rem;
+}
+
+#town {
+    grid-area: town;
+    padding: 1rem;
 }
 
 #npcs {
