--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,4 +1,4 @@
-<!-- <button type="button" (click)="createTown()">Create Town?</button> -->
+<app-town id="town" role="landmark"></app-town>
 
 <app-npcs-list role="landmark" id="npcs"></app-npcs-list>
 
