--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -38,6 +38,22 @@ header nav ul li {
 main {
     grid-area: main;
     padding: 1rem;
+    position: relative;
+}
+
+
+#tables {
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 10;
+    padding: 1rem;
+    width: 60vw;
+    transform: translate(100%, 0);
+    transition: all 0.4s ease-in-out;
+}
+#tables[aria-expanded=true] {
+    transform: none;
 }
 
 footer {
