--- a/src/app/towns/town-edit-modal/town-edit-modal.component.html
+++ b/src/app/towns/town-edit-modal/town-edit-modal.component.html
@@ -21,6 +21,6 @@
 </mat-dialog-content>
 
 <mat-dialog-actions>
-  <button mat-flat-button color="primary" type="submit" form="townEditForm">Save</button>
-  <button mat-flat-button type="button" mat-dialog-close>Cancel</button>
+  <button type="submit" form="townEditForm">Save</button>
+  <button type="button" mat-dialog-close>Cancel</button>
 </mat-dialog-actions>
