--- a/src/app/towns/town/town.component.html
+++ b/src/app/towns/town/town.component.html
@@ -2,7 +2,7 @@
     <summary>
         <div id="summary-title">Town: {{ town.name }}</div>
         <div class="actions">
-            <button type="button" mat-raised-button color="primary" (click)="editModal()">
+            <button type="button" (click)="editModal()">
                 Edit Town
             </button>
         </div>
