--- a/src/app/notes/notes-list/notes-list.component.html
+++ b/src/app/notes/notes-list/notes-list.component.html
@@ -1,4 +1,4 @@
 <header>
     <h2>Notes</h2>
 </header>
-<app-note *ngFor="let note of notes" [note]="note" class="mat-typography"></app-note>
+<app-note *ngFor="let note of notes" [note]="note"></app-note>
