--- a/src/app/npcs/npc/npc.component.css
+++ b/src/app/npcs/npc/npc.component.css
@@ -27,3 +27,42 @@ summary #summary-title {
     font-weight: bold;
     font-size: 1rem;
 }
+
+mat-form-field {
+    width: 100%;
+}
+
+.btn-reroll {
+    background-color: transparent;
+    font-size: 2rem;
+    border: none;
+    padding: 0 1rem;
+    margin: 0;
+    cursor: pointer;
+}
+
+button {
+    background-color: #eee;
+    border: none;
+    border-radius: 2px;
+    font-size: .9rem;
+    padding: .5rem 1rem;
+    cursor: pointer;
+}
+summary button {
+    padding: .25rem .5rem;
+}
+button:hover {
+    background-color: lightblue;
+}
+button + button {
+    margin-left: 1rem;
+}
+button[type=submit] {
+    background-color: slateblue;
+    color: white;
+}
+button.deleteBtn {
+    background-color: red;
+    color: white;
+}
