--- a/src/app/npcs/npcs-list/npcs-list.component.html
+++ b/src/app/npcs/npcs-list/npcs-list.component.html
@@ -1,5 +1,7 @@
 <header>
     <h2>NPCs</h2>
-    <button type="button" (click)="getNPC()">Create NPC</button>
+    <div>
+        <button type="button" (click)="getNPC()">Create NPC</button>
+    </div>
 </header>
 <app-npc *ngFor="let npc of npcs" [npc]="npc"></app-npc>
