--- a/src/app/tables/tables-list/tables-list.component.html
+++ b/src/app/tables/tables-list/tables-list.component.html
@@ -1,6 +1,8 @@
 <header>
     <h2>Tables</h2>
-    <button type="button" (click)="closeTable()">Close</button>
+    <div>
+        <button type="button" (click)="closeTable()">Close</button>
+    </div>
 </header>
 
 <app-table-multi *ngFor="let table of tables" [table]="table"></app-table-multi>
