--- a/src/app/notes/note/note.component.html
+++ b/src/app/notes/note/note.component.html
@@ -1,34 +1,34 @@
-<header>
-    <h4>{{ note.title }}</h4>
-    <div *ngIf="!isEdit">
-        <button type="button" (click)="toggleEdit()">
-            Edit Note
-        </button>
-    </div>
-</header>
+<details [open]="!note.collapse" (toggle)="setCollapse($event)">
+    <summary>
+        <div id="summary-title">{{ note.title }}</div>
+        <div class="actions">
+            <button *ngIf="!isEdit" type="button" (click)="toggleEdit()">Edit Note</button>
+        </div>
+    </summary>
 
-<div class="body">
-    <div *ngIf="!isEdit; else editForm" class="content" [innerHTML]="note.contentHtml"></div>
-    <ng-template #editForm>
-    <form id="noteEditForm" (ngSubmit)="saveEdit($event)">
-        <div>
-            <mat-form-field appearance="outline">
-                <mat-label>Title</mat-label>
-                <input matInput id="title" type="text" name="title" value="{{ note.title }}" required>
-            </mat-form-field>
-        </div>
-        <div>
-            <mat-form-field appearance="outline">
-            <mat-label>Content</mat-label>
-            <textarea matInput id="content" type="text" name="content" rows="12">{{ note.content }}</textarea>
-            </mat-form-field>
-        </div>
-        <div>
-            <button type="submit">Save</button>
-            <button type="button" (click)="toggleEdit()">Cancel</button>
-            <button type="button" class="deleteBtn" (click)="deleteNote()">Delete Note</button>
-        </div>
-        </form>
-    </ng-template>
-</div>
+    <div class="body">
+        <div *ngIf="!isEdit; else editForm" class="content" [innerHTML]="note.contentHtml"></div>
+        <ng-template #editForm>
+        <form id="noteEditForm" (ngSubmit)="saveEdit($event)">
+            <div>
+                <mat-form-field appearance="outline">
+                    <mat-label>Title</mat-label>
+                    <input matInput id="title" type="text" name="title" value="{{ note.title }}" required>
+                </mat-form-field>
+            </div>
+            <div>
+                <mat-form-field appearance="outline">
+                <mat-label>Content</mat-label>
+                <textarea matInput id="content" type="text" name="content" rows="12">{{ note.content }}</textarea>
+                </mat-form-field>
+            </div>
+            <div>
+                <button type="submit">Save</button>
+                <button type="button" (click)="toggleEdit()">Cancel</button>
+                <button type="button" class="deleteBtn" (click)="deleteNote()">Delete Note</button>
+            </div>
+            </form>
+        </ng-template>
+    </div>
+</details>
 
