--- a/src/app/npcs/npc/npc.component.html
+++ b/src/app/npcs/npc/npc.component.html
@@ -1,14 +1,14 @@
-<details>
+<details [open]="!npc.collapse" (toggle)="setCollapse($event)">
     <summary>
-        <div id="summary-title">{{ getNPCName() }}</div>
+        <div id="summary-title">{{ npc.npcName }}</div>
         <div class="actions">
             <button *ngIf="!isEdit" type="button" (click)="toggleEdit()">Edit NPC</button>
         </div>
     </summary>
     <div *ngIf="!isEdit">
     <ul>
-        <li *ngFor="let field of getFieldNames()">
-            {{ getFieldLabel(field) }} {{ npc.fields[field] }}
+        <li *ngFor="let field of npc.getFieldNames()">
+            {{ getFieldLabel(field) }} {{ npc[field] }}
         </li>
     </ul>
     </div>
@@ -19,8 +19,8 @@
             <mat-form-field appearance="outline">
                 <mat-label>{{ field.label }}</mat-label>
                 <ng-container [ngSwitch]="field.key">
-                <textarea *ngSwitchCase="'notes'" rows=5 matInput id="{{ field.key }}" name="{{ field.key }}">{{ npc.fields[field.key] }}</textarea>
-                <input *ngSwitchDefault matInput id="{{ field.key }}" type="text" name="{{ field.key }}" value="{{ npc.fields[field.key] }}" />
+                <textarea *ngSwitchCase="'notes'" rows=5 matInput id="{{ field.key }}" name="{{ field.key }}">{{ npc[field.key] }}</textarea>
+                <input *ngSwitchDefault matInput id="{{ field.key }}" type="text" name="{{ field.key }}" value="{{ npc[field.key] }}" />
                 </ng-container>
                 <button matSuffix type="button" class="btn-reroll" *ngIf="field.key !== 'notes'" (click)="reroll(field.key)" aria-label="Reroll">&#9861;</button>
             </mat-form-field>
