--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,6 +1,6 @@
 <div id="leftColumn">
-<app-town id="town" role="landmark"></app-town>
-<app-npcs-list role="landmark" id="npcs"></app-npcs-list>
+<app-town id="town" role="region" aria-label="Town"></app-town>
+<app-npcs-list role="region" id="npcs" aria-label="NPCs"></app-npcs-list>
 </div>
 
-<app-notes-list role="landmark" id="notes"></app-notes-list>
+<app-notes-list role="region" id="notes" aria-label="Notes"></app-notes-list>
