--- a/src/app/towns/town/town.component.html
+++ b/src/app/towns/town/town.component.html
@@ -1,6 +1,6 @@
 <details open>
     <summary>
-        <div id="summary-title">Town: {{ town.name }}</div>
+        <div class="summary-title">Town: {{ town.name }}</div>
         <div class="actions">
             <button type="button" (click)="editModal()">
                 Edit Town
